--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "chart.js": "^4.4.6",
+    "jwt-decode": "^4.0.0",
+    "ngx-cookie-service": "^18.0.0",
     "ngx-scanner-qrcode": "^1.6.9",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
