--- a/package.json
+++ b/package.json
@@ -17,21 +17,24 @@
     "@angular/core": "^19.0.1",
     "@angular/forms": "^19.0.1",
     "@angular/material": "^19.0.1",
+    "@angular/material-moment-adapter": "^19.0.1",
     "@angular/platform-browser": "^19.0.1",
     "@angular/platform-browser-dynamic": "^19.0.1",
     "@angular/router": "^19.0.1",
+    "angularx-qrcode": "^19.0.0",
     "chart.js": "^4.4.6",
     "jwt-decode": "^4.0.0",
-    "ngx-cookie-service": "^18.0.0",
-    "ngx-scanner-qrcode": "^1.6.9",
+    "ng2-charts": "^7.0.0",
+    "ngx-cookie-service": "^19.0.0",
+    "ngx-scanner-qrcode": "^1.7.3",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.2.7",
-    "@angular/cli": "^18.2.7",
+    "@angular-devkit/build-angular": "^19.0.2",
+    "@angular/cli": "^19.0.2",
     "@angular/compiler-cli": "^19.0.1",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.20",
